level1/yaml files/ingress_production_guestbook_routing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8088
        path: /
