level1/yaml files/ingress_staging_guestbook_routing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8088
        path: /
